--- a/SimpleWeather.Windows/Controls/UVControl.xaml
+++ b/SimpleWeather.Windows/Controls/UVControl.xaml
@@ -6,7 +6,7 @@
     xmlns:local="using:SimpleWeather.NET.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-    xmlns:toolkitControls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:toolkitControls="using:CommunityToolkit.WinUI.Controls"
     MinWidth="340"
     mc:Ignorable="d">
 
