--- a/SimpleWeather.Windows/Main/WeatherAlertPage.xaml
+++ b/SimpleWeather.Windows/Main/WeatherAlertPage.xaml
@@ -8,7 +8,7 @@
     xmlns:local="using:SimpleWeather.NET.Main"
     xmlns:localcontrols="using:SimpleWeather.NET.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:toolkitControls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:toolkitControls="using:CommunityToolkit.WinUI.Controls"
     d:Background="{ThemeResource RegionBrush}"
     mc:Ignorable="d">
 
