--- a/SimpleWeather.Windows/Controls/AQIForecastControl.xaml
+++ b/SimpleWeather.Windows/Controls/AQIForecastControl.xaml
@@ -7,7 +7,7 @@
     xmlns:local="using:SimpleWeather.NET.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-    xmlns:toolkitControls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:toolkitControls="using:CommunityToolkit.WinUI.Controls"
     xmlns:utils="using:SimpleWeather.Utils"
     xmlns:winui="using:Windows.UI"
     MinWidth="400"
