--- a/SimpleWeather.Windows/Main/WeatherAQIPage.xaml
+++ b/SimpleWeather.Windows/Main/WeatherAQIPage.xaml
@@ -9,7 +9,7 @@
     xmlns:local="using:SimpleWeather.NET.Main"
     xmlns:localControls="using:SimpleWeather.NET.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:toolkitControls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:toolkitControls="using:CommunityToolkit.WinUI.Controls"
     xmlns:viewModels="using:SimpleWeather.NET.ViewModels"
     d:Background="{ThemeResource RegionBrush}"
     mc:Ignorable="d">
