--- a/SimpleWeather.Windows/Main/WeatherNow.Resources.xaml
+++ b/SimpleWeather.Windows/Main/WeatherNow.Resources.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="using:SimpleWeather.NET.Converters">
+    xmlns:converters="using:SimpleWeather.NET.Converters"
+    xmlns:toolkit="using:CommunityToolkit.WinUI">
     <ResourceDictionary.ThemeDictionaries>
         <ResourceDictionary x:Key="Dark">
             <Style
@@ -24,9 +25,14 @@
             <x:Double x:Key="AcrylicStackTintOpacity">1.0</x:Double>
         </ResourceDictionary>
     </ResourceDictionary.ThemeDictionaries>
-    <SolidColorBrush x:Name="ForegroundColorBrush" Color="{ThemeResource TextFillColorPrimary}" />
+    <SolidColorBrush x:Key="ForegroundColorBrush" Color="{ThemeResource TextFillColorPrimary}" />
     <converters:DetailsItemGridFilterConverter x:Key="detailsFilter" />
     <converters:GraphDataVisibilityConverter x:Key="graphDataConv" />
     <converters:TempToColorTempConverter x:Key="tempToColorTempConverter" FallbackColor="{ThemeResource ForegroundColor}" />
     <converters:UriToImageSourceConverter x:Key="uriImgSrcConv" />
+    <toolkit:AttachedDropShadow
+        x:Key="CommonShadow"
+        BlurRadius="15.0"
+        CastTo="{Binding ElementName=ShadowTarget, Mode=OneWay}"
+        Opacity="{Binding ElementName=WNowPage, Path='ControlShadowOpacity', Mode=OneWay}" />
 </ResourceDictionary>
